Included Local Bootstrap Files
Download bootstrap folder, and place in your group project folder beside
the main html folders

--- a/main_css.css
+++ b/main_css.css
@@ -46,7 +46,7 @@
 
 #wrapper.menuDisplayed  #sidebar-wrapper{
 	width: 241px;
-	position: absolute;
+	position: fixed;
 	background-color:black;
 }
 
