Updates to main page
Introduced modal section when clicking login/sign up

--- a/main_css.css
+++ b/main_css.css
@@ -41,13 +41,14 @@
 	width: 100%;
 	position: absolute;
 	padding: 15px;
-	border: 5px solid green;
 }
 
 #wrapper.menuDisplayed  #sidebar-wrapper{
+	height: 100%;
 	width: 241px;
 	position: fixed;
 	background-color:black;
+	
 }
 
 /* Sidebar Styling */
@@ -73,6 +74,26 @@
 }
 
 /* Search Bar */
-.form-control{
-	width: 239px;
+#searchbar{
+	width: 230px;
+}
+
+/* Well */
+.well{
+	padding-left: 300px;
+}
+
+/* Images */
+img {
+	border-radius:12px;
+}
+
+.front-image{
+	display: block;
+	display: inline-block;
+
+	width: 600px;
+	height: 846px;
+	box-shadow: 10px 3px 50px grey;
+	border-radius: 25px;
 }
